Mcts (#12)
* Update README.md

* Update README.md

* [wip] init

* Update package.scala

* Update README.md

* first messy version working.

* Update BoardTicTacToe.scala

* Update BoardTicTacToe.scala

* improved a little

* some clean up

* Update package.scala

* Update package.scala

* update

* Array 2D clone benchmark

* array clone methods benchmarks

* huge refactor [wip]

* some refactor [wip]

* [wip]

* fix old mcts

* various comments

* review

* review

* code rev

* Update application.conf

* mark deprecated code

* mcts.tree tests

* [wip] tests

* refactor

* mcts.State Spec

* code review

* review

* scalameter [wip] not working.

* Update build.sbt

* property testing UCT | code rev

* fix mcts board trait [wip]

* Update NodeSpec.scala

* add scala logging

* [wip] testing

* mcts test complete

* [wip] fixing

* [wip] mcts draw test

* not ok

* finalizing

* remove deprecated

* add must test

* code rev

* mcts 1 game

* Update BoardTicTacToe.scala

* codacy rev

* code rev

* ignore non deterministic test

* Update build.sbt

* Mcts scalameter (#13)

* [wip] working easier with jdk8

* performance regression report

* Update assembly.sbt

* update benchmark arraycopy

* Update MNKSolversBench.scala

* Update build.sbt

* code refactor

* Update README.md

* Update README.md

* Update build.sbt

* codacy review

* tictactoes benchs

* using config file

* Update MctsBoardSpec.scala

* ci rev

* codacy rev